<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.arsenico</groupId>
  <artifactId>sqldeployer</artifactId>
  <packaging>maven-plugin</packaging>
  <version>1.0.0</version>
  <name>Sqldeployer Maven Plugin</name>
  <description>Maven plugin for deploy sql code on target database saving operation on a log table.</description>
  <url>http://maven.apache.org</url>
  <!--
	Con eclipse il sistema è stato testato con maven 2 
	 -->

  <scm>
  	<connection>https://sqldeployer-maven-plugin.googlecode.com/svn/trunk</connection>
  	<url>https://sqldeployer-maven-plugin.googlecode.com/svn/trunk</url>
  </scm>
  <build>
		<plugins>

			<!-- Plugin per la release -->
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.2.2</version>
				<configuration>
					<tagNameFormat>@{project.version}</tagNameFormat>
				</configuration>
			</plugin>

			<!-- Plugin per definire la versione -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.5</source>
					<target>1.5</target>
				</configuration>
			</plugin>
			

		</plugins>

		<!-- estensione per la pubblicazione -->
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav</artifactId>
				<version>1.0-beta-2</version>
			</extension>
		</extensions>

	</build>
	
	<dependencies>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugin-testing</groupId>
			<artifactId>maven-plugin-testing</artifactId>
			<version>1.2</version>
			<type>pom</type>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>junit</artifactId>
					<groupId>junit</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugin-testing</groupId>
			<artifactId>maven-plugin-testing-harness</artifactId>
			<version>1.2</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>junit</artifactId>
					<groupId>junit</groupId>
				</exclusion>				
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugin-testing</groupId>
			<artifactId>maven-plugin-testing-tools</artifactId>
			<version>1.2</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>junit</artifactId>
					<groupId>junit</groupId>
				</exclusion>
				<exclusion>
					<artifactId>plexus-utils</artifactId>
					<groupId>org.codehaus.plexus</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.1.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.15</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>jms</artifactId>
					<groupId>javax.jms</groupId>
				</exclusion>
				<exclusion>
					<artifactId>jmxtools</artifactId>
					<groupId>com.sun.jdmk</groupId>
				</exclusion>
				<exclusion>
					<artifactId>jmxri</artifactId>
					<groupId>com.sun.jmx</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.jmock</groupId>
			<artifactId>jmock</artifactId>
			<version>2.5.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>3.6.8.Final</version>
			<type>jar</type>
			<scope>compile</scope>
<!-- 			<exclusions> -->
<!-- 				<exclusion> -->
<!-- 					<artifactId>slf4j-api</artifactId> -->
<!-- 					<groupId>org.slf4j</groupId>					 -->
<!-- 				</exclusion> -->
<!-- 			</exclusions> -->
		</dependency>			
<!-- 		<dependency> -->
<!-- 			<artifactId>slf4j-api</artifactId> -->
<!-- 			<groupId>org.slf4j</groupId> -->
<!-- 			<version>1.6.1</version>					 -->
<!-- 		</dependency> -->
		<dependency>
			<groupId>javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.12.1.GA</version>
		</dependency>
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb-j5</artifactId>
			<version>2.2.4</version>
			<type>jar</type>
			<scope>test</scope>
		</dependency>		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.10</version>
			<scope>test</scope>
		</dependency>
				
	</dependencies>
	<properties>
		<!-- Se true disabilita i test -->
		<skipTests>false</skipTests>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<!-- Elenco degli sviluppatori -->
	<developers>
		<developer>
			<id>francesco.benincasa</id>
			<name>Francesco Benincasa</name>			
			<email>xcesco@gmail.com</email>
			<roles>
				<role>Progettista</role>
				<role>Programmatore</role>
			</roles>
		</developer>
	</developers>

	<reporting>
		<plugins>

			<!-- Javadoc Report -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.8.1</version>

				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.5</source>
					<meminitial>128m</meminitial>
					<maxmem>512m</maxmem>
					<excludePackageNames>jsp;jsp.*</excludePackageNames>
				</configuration>
			</plugin>

			<!-- Test di copertura -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.5.1</version>
				<configuration />
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jxr-maven-plugin</artifactId>
				<version>2.0-beta-1</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.5</source>
					<meminitial>128m</meminitial>
					<maxmem>512m</maxmem>
					<additionalJOption>-J -XX:MaxPermSize=256</additionalJOption>
					<excludes>
						<exclude>**/*_jsp.java</exclude>
					</excludes>
				</configuration>
			</plugin>


			<!-- Change report on repository -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>changelog-maven-plugin</artifactId>
				<version>2.0-beta-1</version>
			</plugin>


		</plugins>
	</reporting>
</project>
